fix color tokens for dark mode

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,8 +9,8 @@
 
 // colors
 @import url(./tokens/tokens.css);
-@import url(./tokens/theme.light.css) (prefers-color-scheme: light);
-@import url(./tokens/theme.dark.css) (prefers-color-scheme: dark);
+@import url(./tokens/theme.light.css);
+// @import url(./tokens/theme.dark.css) (prefers-color-scheme: dark);
 @import 'themes/colors';
 
 // components
@@ -120,10 +120,9 @@
         transform: translate(0, 0) rotate(-90deg);
         transform-origin: left bottom;
         white-space: nowrap;
-        font-family: "Product Sans Black", sans-serif;
         font-size: 133.31px;
         letter-spacing: -6px;
-        font-weight: $bold-fw;
+        font-weight: $black-fw;
         color: var(--md-sys-color-on-primary);
     }
 }
